chore: some improvements to large map screen button panel
- all settings buttons now on the bottom
- added team props button to directly open ftb teams props editor
- fixed some button tooltips
- change team color immediately updated large map screen
  - known issue: minimap can take several seconds to update